<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/text_title"
            android:layout_marginTop="90dp"
            style="@style/SubTitle"
            android:textAlignment="center"
            android:textColorHint="@color/colorPrimaryDark"
            android:hint="@string/pgList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <EditText
            android:layout_marginTop="40dp"
            android:id="@+id/input_one"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/place_enterprise"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            android:inputType=
                "text|textAutoCorrect"
            />
        <EditText
            android:id="@+id/input_two"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/place_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_one"
            android:layout_margin="2dp"
            android:inputType="text|textAutoCorrect" />
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/input_three"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/place_workArea"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_two"
            android:inputType="text|textAutoCorrect" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/input_four"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/place_wish"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_three"
            android:inputType="number" />


        <Button
            android:id="@+id/button"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_margin="20dp"
            android:onClick="onHandleClick"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_four"
            android:text="@string/btn_register"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:visibility="gone"
            android:textStyle="bold"
            android:textColor="#ff0000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button"
            />

        <Button
            android:id="@+id/goToPersonal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12sp"
            android:onClick="goTo"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/btn_goToPersonal"
            />
</androidx.constraintlayout.widget.ConstraintLayout>